V1.1 Het is nu mogelijk om padding te gebruiken+er wordt gebruik gemaakt van een z-index en wat kleine bug fixes

--- a/main.css
+++ b/main.css
@@ -12,6 +12,9 @@
     
 .movable{
     position:absolute;
+    color:white;
+    border-color:black;
+    background:#ccc url('img/bg02.gif') top left;
 }
 
 *{ /*dit zorgt er voor dat je niks kan selecteen*/
@@ -21,8 +24,7 @@
    -ms-user-select: none;
    user-select: none;
 }
-
-html{
+body{
     background:#ccc url('img/bg01.gif') top left;
     overflow:hidden;
 }
@@ -48,7 +50,7 @@ body{
 	color:#fff;
 	letter-spacing:-2px;
 	padding-left:5px;
-	}
+}
 
 #title i{
 	font-family: Helvetica, Calibri, sans-serif;
@@ -72,6 +74,7 @@ body{
     background:#242424;
     width:40px;
     height:140px;
+    z-index:9001;
 }
 #sideMenuToggle{
     position:absolute;
@@ -79,6 +82,7 @@ body{
     height:60px;
     width:32px;
     top:40px;
+    z-index:9000;
 }
 #save{
     width:32px;
@@ -96,10 +100,10 @@ body{
     background-color:#CCC;
 }
 #languages{
-    border-style:solid;
     text-align:center;
     position:absolute;
     top:100px;
+    border-style:solid;
 }
 .list>span{
     display:block;
